--- a/_posts/2024-08-29-wallet07.md
+++ b/_posts/2024-08-29-wallet07.md
@@ -127,8 +127,8 @@ func (c *WalletCommand) runListKeys(cmd *cobra.Command, args []string) error {
 func (c *WalletCommand) importKeyCmd() *cobra.Command {
 	return &cobra.Command{
 		Use:   "import",
-		Short: "Import a key, example: ./wallet key import ./key.key wif",
-		Long:  "Import a key, example: ./wallet key import ./key.key wif",
+		Short: "Import a key, example: ./wallet key import ./key.key password wif",
+		Long:  "Import a key, example: ./wallet key import ./key.key password wif",
 		RunE:  c.runImportKeyCmd,
 	}
 }
@@ -137,7 +137,11 @@ func (c *WalletCommand) importKeyCmd() *cobra.Command {
 func (c *WalletCommand) runImportKeyCmd(cmd *cobra.Command, args []string) error {
 	fmt.Println("key import")
 	store := storage.NewLocalStorage(args[0])
-	err := store.SaveKey(args[1])
+	encryptedKey, err := utils.AesEncrypt([]byte(args[2]), args[1])
+	if err != nil {
+		return errors.Wrap(err, "encrypt key failed")
+	}
+	err = store.SaveKey(encryptedKey)
 	if err != nil {
 		return errors.Wrap(err, "save key failed")
 	}
