--- a/_posts/2024-09-23-wsl_proxy.md
+++ b/_posts/2024-09-23-wsl_proxy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: “wsl: 检测到 localhost 代理配置，但未镜像到 WSL......”解决办法
+title: “wsl：检测到 localhost 代理配置，但未镜像到 WSL......”解决办法
 tags: wsl
 mermaid: false
 math: false
